--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "test": "NODE_ENV=test jest",
+    "test": "jest",
     "test:coverage": "jest --coverage", 
     "heroku-postbuild": "npm run build"
   },
