--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,20 +12,21 @@ jobs:
   # Job de test
   test:
     runs-on: ubuntu-latest  # Utilisation d'un environnement Ubuntu
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3  # Vérifier le code source
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2  # Installer Docker Buildx pour la création d'images
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'  # Vous pouvez spécifier votre version Node.js ici
 
-      - name: Build Docker image
-        run: docker build -t plantz-app .  # Construire l'image Docker avec le Dockerfile
+      - name: Install dependencies
+        run: npm install  # Installation des dépendances avec npm
 
-      - name: Run tests in Docker container
-        run: |
-          docker run --env-file .env plantz-app npm run test  # Exécuter les tests dans le conteneur Docker
+      - name: Run tests
+        run: npm run test  # Exécution des tests Jest
 
   # Job de déploiement
   deploy:
@@ -36,24 +37,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3  # Vérifier le code source
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2  # Installer Docker Buildx pour la création d'images
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'  # Version de Node.js à utiliser
 
-      - name: Build Docker image
-        run: docker build -t plantz-app .  # Construire l'image Docker avec le Dockerfile
+      - name: Install dependencies
+        run: npm install  # Installation des dépendances avec npm
 
-      - name: Run Docker container
+      - name: Start the server
         run: |
-          docker run -d -p 8080:8080 --env-file .env plantz-app  # Exécuter le conteneur Docker en arrière-plan
+          nohup npm start &  # Démarre l'application en arrière-plan
 
       - name: Install Ngrok
         run: |
           sudo apt-get install -y ngrok  # Installer Ngrok sur le runner GitHub Actions
-          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Authentification avec votre token Ngrok
+          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Authentification avec votre token
 
       - name: Expose the local server with Ngrok
         run: |
-          ngrok http 8080 --log=stdout &  # Lancer Ngrok pour exposer votre application sur le port 8080
+          ngrok http 5000 --log=stdout &  # Lancer Ngrok pour exposer votre application sur le port 5000
 
       - name: Get Ngrok URL
         id: ngrok-url
