--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ jobs:
   # Job de test
   test:
     runs-on: ubuntu-latest  # Utilisation d'un environnement Ubuntu
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3  # Vérifier le code source
@@ -52,15 +52,21 @@ jobs:
       - name: Install Ngrok
         run: |
           sudo apt-get install -y ngrok  # Installer Ngrok sur le runner GitHub Actions
-          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Authentification avec votre token
+          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Authentification avec votre token Ngrok
 
       - name: Expose the local server with Ngrok
         run: |
-          ngrok http 5000 --log=stdout &  # Lancer Ngrok pour exposer votre application sur le port 5000
+          nohup ngrok http 8080 --log=stdout &  # Lancer Ngrok pour exposer l'application sur le port 8080
 
       - name: Get Ngrok URL
+        id: ngrok-url
         run: |
-          # Récupérer l'URL générée par Ngrok
+          # Attendre quelques secondes pour que Ngrok ait généré l'URL
+          sleep 5
           url=$(curl -s http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')
           echo "Ngrok URL: $url"
-          echo "NGROK_URL=$url" >> $GITHUB_ENV  # Stocke l'URL générée dans les variables d'environnement
+          echo "NGROK_URL=$url" >> $GITHUB_ENV  # Stocke l'URL générée pour l'utiliser dans les étapes suivantes
+
+      - name: Display Ngrok URL
+        run: |
+          echo "The public Ngrok URL is: ${{ env.NGROK_URL }}"
