--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,14 +47,18 @@ jobs:
       - name: Install dependencies
         run: npm install  # Installation des dépendances avec npm
 
+      - name: Build the application
+        run: npm run build  # Compiler l'application si vous utilisez TypeScript
+
       - name: Start the server
         run: |
           nohup npm start &  # Démarre l'application en arrière-plan
 
       - name: Install Ngrok
         run: |
-          sudo apt-get install -y ngrok  # Installer Ngrok sur le runner GitHub Actions
-          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Authentification avec votre token Ngrok
+          curl -s https://ngrok.com/download | tar xz -C /tmp
+          sudo mv /tmp/ngrok /usr/local/bin
+          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
       - name: Expose the local server with Ngrok
         run: |
