--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Install Ngrok
         run: |
-          curl -s https://ngrok.com/download | tar xz -C /tmp
+          curl -s https://ngrok.com/download | unzip -d /tmp
           sudo mv /tmp/ngrok /usr/local/bin
           ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
