--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           node-version: '18'  # Version de Node.js à utiliser
 
+      - name: Set up DATABASE_URL
+        run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV  # Charge la variable DATABASE_URL dans l'environnement
+
       - name: Install dependencies
         run: npm install  # Installation des dépendances avec npm
 
@@ -56,7 +59,7 @@ jobs:
 
       - name: Install Ngrok
         run: |
-          curl -s https://ngrok.com/download | tar -xz -C /tmp  # Décompresser Ngrok
+          curl -s https://ngrok.com/download | tar -xv -C /tmp  # Décompresser Ngrok correctement
           sudo mv /tmp/ngrok /usr/local/bin
           ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Authentification avec Ngrok
 
