--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,21 @@ jobs:
   # Job de test
   test:
     runs-on: ubuntu-latest  # Utilisation d'un environnement Ubuntu
-    continue-on-error: true  # Ignore les erreurs de test et continue
+
+    services:
+      postgres:
+        image: postgres:15  # Utiliser l'image officielle PostgreSQL
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: testdb
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U user" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=3
 
     steps:
       - name: Checkout code
@@ -21,47 +35,49 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Vous pouvez spécifier votre version Node.js ici
+          node-version: '18'  # Spécifiez la version de Node.js
 
       - name: Install dependencies
-        run: npm install  # Installation des dépendances avec npm
+        run: npm install  # Installation des dépendances
+
+      - name: Set DATABASE_URL environment variable
+        run: echo "DATABASE_URL=postgresql://user:password@localhost:5432/testdb" >> $GITHUB_ENV
 
       - name: Run tests
-        run: npm run test  # Exécution des tests Jest
+        env:
+          DATABASE_URL: ${{ env.DATABASE_URL }}
+        run: npm run test  # Exécute les tests unitaires avec Jest
 
   # Job de déploiement
   deploy:
-    needs: test  # Ce job se déclenche seulement après le job de test
-    runs-on: ubuntu-latest  # Utilisation d'un environnement Ubuntu
-    if: ${{ always() }}  # Le job se lance même si le job de test échoue
+    needs: test  # Ce job se déclenche après le job de test
+    runs-on: ubuntu-latest  # Environnement Ubuntu
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3  # Vérifier le code source
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'  # Version de Node.js à utiliser
-
-      - name: Set up DATABASE_URL
-        run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV  # Charge la variable DATABASE_URL dans l'environnement
-
-      - name: Install dependencies
-        run: npm install  # Installation des dépendances avec npm
-
-      - name: Build the application
-        run: npm run build  # Compiler l'application si vous utilisez TypeScript
-
-      - name: Start the server
+      - name: Set up Docker Compose
         run: |
-          nohup npm start &  # Démarre l'application en arrière-plan
+          docker-compose up -d  # Lancer les conteneurs avec Docker Compose
+
+      - name: Wait for PostgreSQL
+        run: |
+          until docker exec $(docker ps -qf "name=postgres") pg_isready -U user -h localhost; do
+            echo "Waiting for database...";
+            sleep 5;
+          done
+
+      - name: Build and start the backend
+        run: |
+          docker build -t plant-backend .  # Construire l'image Docker pour le backend
+          docker run -d --name backend -p 8080:8080 --env-file .env plant-backend
 
       - name: Install Ngrok
         run: |
-          curl -s https://ngrok.com/download | tar -xv -C /tmp  # Décompresser Ngrok correctement
+          curl -s https://ngrok.com/download | tar -xv -C /tmp
           sudo mv /tmp/ngrok /usr/local/bin
-          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Authentification avec Ngrok
+          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
 
       - name: Expose the local server with Ngrok
         run: |
@@ -70,11 +86,9 @@ jobs:
       - name: Get Ngrok URL
         id: ngrok-url
         run: |
-          # Attendre quelques secondes pour que Ngrok ait généré l'URL
           sleep 5
           url=$(curl -s http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')
-          echo "Ngrok URL: $url"
-          echo "NGROK_URL=$url" >> $GITHUB_ENV  # Stocke l'URL générée pour l'utiliser dans les étapes suivantes
+          echo "NGROK_URL=$url" >> $GITHUB_ENV
 
       - name: Display Ngrok URL
         run: |
