--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,19 +3,19 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # Déclenchement lors d'un push sur la branche principale
+      - main
   pull_request:
     branches:
-      - main  # Déclenchement lors de la création d'un pull request sur la branche principale
+      - main
 
 jobs:
   # Job de test
   test:
-    runs-on: ubuntu-latest  # Utilisation d'un environnement Ubuntu
+    runs-on: ubuntu-latest
 
     services:
       postgres:
-        image: postgres:15  # Image Docker PostgreSQL
+        image: postgres:15
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: 0000
@@ -30,15 +30,26 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Vérifier le code source
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Spécifiez la version de Node.js
+          node-version: '18'
 
       - name: Install dependencies
-        run: npm install  # Installation des dépendances
+        run: npm install
+
+      - name: Wait for PostgreSQL
+        run: |
+          for i in {1..30}; do
+            if pg_isready -h localhost -p 5432; then
+              echo "PostgreSQL is ready";
+              break;
+            fi
+            echo "Waiting for PostgreSQL...";
+            sleep 2;
+          done
 
       - name: Set DATABASE_URL environment variable
         run: echo "DATABASE_URL=postgres://postgres:0000@localhost:5432/plantZ" >> $GITHUB_ENV
@@ -46,54 +57,32 @@ jobs:
       - name: Run tests
         env:
           DATABASE_URL: ${{ env.DATABASE_URL }}
-        run: npm run test  # Exécute les tests unitaires avec Jest
+        run: npm run test
 
   # Job de déploiement
   deploy:
-    needs: test  # Ce job se déclenche après le job de test
-    runs-on: ubuntu-latest  # Environnement Ubuntu
-    if: always()  # Lance le déploiement même si le job de test échoue
+    needs: test
+    runs-on: ubuntu-latest
+    if: always()
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Vérifier le code source
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Version de Node.js à utiliser
+          node-version: '18'
 
       - name: Set DATABASE_URL environment variable
         run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
 
       - name: Install dependencies
-        run: npm install  # Installation des dépendances avec npm
+        run: npm install
 
       - name: Build the application
-        run: npm run build  # Compiler l'application si vous utilisez TypeScript
+        run: npm run build
 
       - name: Start the server
         run: |
-          nohup npm start &  # Démarre l'application en arrière-plan
-
-      - name: Install Ngrok
-        run: |
-          curl -s https://ngrok.com/download | tar -xv -C /tmp  # Décompresser Ngrok correctement
-          sudo mv /tmp/ngrok /usr/local/bin
-          ngrok authtoken ${{ secrets.NGROK_AUTH_TOKEN }}  # Authentification avec Ngrok
-
-      - name: Expose the local server with Ngrok
-        run: |
-          nohup ngrok http 8080 --log=stdout &  # Lancer Ngrok pour exposer l'application sur le port 8080
-
-      - name: Get Ngrok URL
-        id: ngrok-url
-        run: |
-          # Attendre quelques secondes pour que Ngrok ait généré l'URL
-          sleep 5
-          url=$(curl -s http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url')
-          echo "NGROK_URL=$url" >> $GITHUB_ENV  # Stocke l'URL générée pour l'utiliser dans les étapes suivantes
-
-      - name: Display Ngrok URL
-        run: |
-          echo "The public Ngrok URL is: ${{ env.NGROK_URL }}"
+          nohup npm start &
